--- a/index.html
+++ b/index.html
@@ -96,40 +96,24 @@
 
         <ul>
           <li>
-            <figure>
-              <img src="./images/1p.jpg" alt="человек" width="270" />
-              <figcaption>
-                Игорь Демьяненко
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/1p.jpg" alt="Игорь Демьяненко" width="270" />
+            Игорь Демьяненко
+            <p>Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/2p.jpg" alt="человек" width="270" />
-              <figcaption>
-                Ольга Репина
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/2p.jpg" alt="Ольга Репина" width="270" />
+            Ольга Репина
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/3p.jpg" alt="человек" width="270" />
-              <figcaption>
-                Николай Тарасов
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img src="./images/3p.jpg" alt="Николай Тарасов" width="270" />
+            Николай Тарасов
+            <p>Marketing</p>
           </li>
           <li>
-            <figure>
-              <img src="./images/4p.jpg" alt="человек" width="270" />
-              <figcaption>
-                Михаил Ермаков
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img src="./images/4p.jpg" alt="Михаил Ермаков" width="270" />
+            Михаил Ермаков
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
