--- a/index.html
+++ b/index.html
@@ -97,22 +97,22 @@
         <ul>
           <li>
             <img src="./images/1p.jpg" alt="Игорь Демьяненко" width="270" />
-            Игорь Демьяненко
+            <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/2p.jpg" alt="Ольга Репина" width="270" />
-            Ольга Репина
+            <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/3p.jpg" alt="Николай Тарасов" width="270" />
-            Николай Тарасов
+            <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/4p.jpg" alt="Михаил Ермаков" width="270" />
-            Михаил Ермаков
+            <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
